--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@
 
 html, body {
   width: 100%;
-  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -24,8 +23,27 @@ code {
 }
 
 .container{
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
+  padding: 0;
+}
+
+
+.navbar{
+  Width: 100%;
+  display: flex;
+  flex-direction: row;
+  padding: 10px 20px;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: black;
+  color: white;
+  margin-bottom: 15px;
+  height: 100px;
+}
+
+.navbar p{
+  margin: 0 0 0 20px;
   padding: 0;
 }
 
@@ -34,6 +52,7 @@ code {
   .container {
     width: 100%;
     padding: 0 5px;
-    margin: 0;
+    margin: 0, auto;
   }
+
 }
